multiple linear regressions

--- a/liniar_regression/linear_regression_in_skit_learn.ipynb
+++ b/liniar_regression/linear_regression_in_skit_learn.ipynb
@@ -39,16 +39,17 @@
     "# Make a prediction using the model\n",
     "# TODO: Predict life expectancy for a BMI value of 21.07931\n",
     "laos_life_exp = bmi_life_model.predict([[21.07931]])\n",
-    "laos_life_exp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"tes\")"
+    "laos_life_exp\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "  BMI was the predictor, also known as an independent variable. \n",
+    "  A predictor is a variable you're looking at in order to make predictions \n",
+    "  about other variables, while the values you are trying to predict \n",
+    "  are known as dependent variables. In this case, life expectancy was \n",
+    "  the dependent variable.\n",
+    "\"\"\""
    ]
   }
  ],
