removed csv files to common folder

--- a/liniar_regression/Mini-batch Gradient Descent.ipynb
+++ b/liniar_regression/Mini-batch Gradient Descent.ipynb
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "# Import data from CSV file\n",
-    "data = np.loadtxt('data.csv', delimiter = ',')\n",
+    "data = np.loadtxt('./data/mini-batch-gradient.csv', delimiter = ',')\n",
     "# The slicing operation [:,:-1] selects all rows and all columns except the last column.\n",
     "X = data[:,:-1]\n",
     "# The : before the comma indicates that we want to select all rows of the array. The -1 after the comma specifies that we want to select the last column of the array.\n",
