--- a/liniar_regression/linear_regression_in_skit_learn.ipynb
+++ b/liniar_regression/linear_regression_in_skit_learn.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "bmi_life_data = pd.read_csv(\"bmi_and_life_expectancy.csv\")\n",
+    "bmi_life_data = pd.read_csv(\"./data/bmi_and_life_expectancy.csv\")\n",
     "\n",
     "X = bmi_life_data[['BMI']]\n",
     "y = bmi_life_data[['Life expectancy']]\n",
