--- a/neural_networks/backpropagation.ipynb
+++ b/neural_networks/backpropagation.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# TODO: Calculate error term for output layer\n",
-    "output_error_term = error * sigmoid(output) * (1 - sigmoid(output))"
+    "output_error_term = error * sigmoid(output_layer_in) * (1 - sigmoid(output_layer_in))"
    ]
   },
   {
