.add method and clearing the models

--- a/neural_networks/deep_learning_with_tensorFlow/Part_2_Neural_networks_with_TensorFlow_and_Keras_(Exercise).ipynb
+++ b/neural_networks/deep_learning_with_tensorFlow/Part_2_Neural_networks_with_TensorFlow_and_Keras_(Exercise).ipynb
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1581,7 +1581,29 @@
     "id": "Qlk-03oapl6S",
     "outputId": "ac7ea2e6-db22-411c-b239-446c624e7ad7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten_4 (Flatten)         (None, 784)               0         \n",
+      "                                                                 \n",
+      " dense_10 (Dense)            (None, 32)                25120     \n",
+      "                                                                 \n",
+      " dense_11 (Dense)            (None, 10)                330       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 25450 (99.41 KB)\n",
+      "Trainable params: 25450 (99.41 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model = tf.keras.Sequential()\n",
     "\n",
@@ -1594,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1604,7 +1626,39 @@
     "id": "oBmAM5Ip15Gg",
     "outputId": "ca254c0a-d6bf-45cf-a36c-3365af23d351"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten_5 (Flatten)         (None, 784)               0         \n",
+      "                                                                 \n",
+      " dense_12 (Dense)            (None, 512)               401920    \n",
+      "                                                                 \n",
+      " dense_13 (Dense)            (None, 256)               131328    \n",
+      "                                                                 \n",
+      " dense_14 (Dense)            (None, 128)               32896     \n",
+      "                                                                 \n",
+      " dense_15 (Dense)            (None, 56)                7224      \n",
+      "                                                                 \n",
+      " dense_16 (Dense)            (None, 28)                1596      \n",
+      "                                                                 \n",
+      " dense_17 (Dense)            (None, 14)                406       \n",
+      "                                                                 \n",
+      " dense_18 (Dense)            (None, 10)                150       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 575520 (2.20 MB)\n",
+      "Trainable params: 575520 (2.20 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "layer_neurons = [512, 256, 128, 56, 28, 14]\n",
     "\n",
@@ -1639,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1649,7 +1703,39 @@
     "id": "kZ2e667J4Bod",
     "outputId": "6d7882d3-e540-4f5e-8745-e1782c4c4dd3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten (Flatten)           (None, 784)               0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 512)               401920    \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 256)               131328    \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 128)               32896     \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 56)                7224      \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 28)                1596      \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 14)                406       \n",
+      "                                                                 \n",
+      " dense_6 (Dense)             (None, 10)                150       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 575520 (2.20 MB)\n",
+      "Trainable params: 575520 (2.20 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "tf.keras.backend.clear_session()\n",
     "\n",
@@ -1665,17 +1751,6 @@
     "          \n",
     "model.summary()    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "ZxZZdnIuA4J2"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
