unsupervised learning project

--- a/unsuperviser_learning/GMM_Clustering_Validation.ipynb
+++ b/unsuperviser_learning/GMM_Clustering_Validation.ipynb
@@ -43,7 +43,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
     "import numpy as np\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "X, y = make_blobs(n_samples= num_samples, \n",
     "                  centers= num_k_clusters,\n",
     "                  cluster_std= k_cluster_std,\n",
-    "                  random_state= random_state)"
+    "                  random_state= random_state)\n"
    ]
   },
   {
@@ -95,7 +95,7 @@
    ],
    "source": [
     "#Check the size of your sample set\n",
-    "print(X.shape, y.shape)"
+    "print(X.shape, y.shape)\n"
    ]
   },
   {
@@ -108,12 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TO DO\n",
-    "range_k_clusters = list(range(2, 7))"
+    "range_k_clusters = list(range(2, 7))\n"
    ]
   },
   {
@@ -135,9 +135,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kmeans_prediction shape (2000,)\n",
+      "kmeans_prediction shape (2000,)\n",
+      "kmeans_prediction shape (2000,)\n",
+      "kmeans_prediction shape (2000,)\n",
+      "kmeans_prediction shape (2000,)\n"
+     ]
+    }
+   ],
    "source": [
     "kmeans_cluster_labels=[]  #This variable will hold the K-Means cluster predictions\n",
     "kmeans_clusterer_list=[] #This variable will hold values needed to plot cluster centers\n",
@@ -159,11 +171,13 @@
     "    # Predict new dataset (X) clusters using the kmeans_model and predict()\n",
     "    kmeans_prediction = kmeans_model.predict(X)\n",
     "    \n",
+    "    print('kmeans_prediction shape', kmeans_prediction.shape)\n",
+    "    \n",
     "    #Adding predictions to list called kmeans_cluster_labels\n",
     "    kmeans_cluster_labels.append(kmeans_prediction)  \n",
     "    \n",
     "    #Adding values to use to determine cluster centers for plotting\n",
-    "    kmeans_clusterer_list.append(kmeans_clusterer.cluster_centers_)"
+    "    kmeans_clusterer_list.append(kmeans_clusterer.cluster_centers_)\n"
    ]
   },
   {
@@ -177,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +221,7 @@
     "    \n",
     "    #Add values used to determine center of clusters when plotting\n",
     "    gmm_clusterer_list.append(np.empty(shape=(gmm_clusterer.n_components, X.shape[1])))\n",
-    "    gmm_clusterer_gen_list.append(gmm_clusterer)"
+    "    gmm_clusterer_gen_list.append(gmm_clusterer)\n"
    ]
   },
   {
@@ -224,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +274,7 @@
     "    \n",
     "    print(\"For k_clusters =\", k_clusters,\n",
     "          \"The avg silhouette_score using K-Means vs GMM is:\", silhouette_avg_kmeans, \"vs \", silhouette_avg_gmm,\n",
-    "          \"\\n\")"
+    "          \"\\n\")\n"
    ]
   },
   {
@@ -274,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "hide_input"
@@ -376,7 +390,7 @@
     "                  \"with k_clusters = %d\" % k_clusters),\n",
     "                 fontsize=14, fontweight='bold')\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
